--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after_success:
   - docker push schawan/muti-nginx
   - docker push schawan/muti-server
   - docker push schawan/muti-worker
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: eu-west-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-eu-west-1-784531048236
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
